...

    <string name="testing">Testing</string>
    <string name="align_color_card">Align the color card within the view above</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>
    <string name="close">Close</string>
    <string name="camera">Camera</string>
    <string name="delete">Delete</string>
    <string name="delete_selected_result">Delete selected result?</string>
    <string name="deleted">Deleted</string>

    <!-- Software notices -->
...

    <!-- App Expiry -->
    <string name="version_expired">Version expired</string>
    <string name="version_has_expired">This version of the app has expired.</string>
    <string name="uninstall_install_from_store">Please uninstall and then install the latest version from Play Store.</string>

    <string name="result_list">List of results</string>
    <string name="no_data">No test results yet</string>
    <string name="tap_to_start">Tap the <b>+</b> button below to\nlaunch a new test.</string>
    <string name="start_test">Start test</string>
    <string name="compost_test">Compost Test</string>
    <string name="soil_test">Soil Test</string>
    <string name="card_test">Simple Card Test</string>
    <string name="colorimetric_test">Colorimetric Test</string>
    <string name="titration_test">Titration Test</string>
    <string name="external_meter">External Meter</string>
    <string name="view_results">View Results</string>
    <string name="resources">Resources</string>
    <string name="results">Results</string>
    <string name="analyzed_image">Analyzed image</string>
    <string name="disable_diagnostics">Disable diagnostics</string>
    <string name="settings_not_clickable">Settings not clickable</string>
    <string name="scanning">Scanning…</string>
    <string name="capture_photo">Capture photo</string>
    <string name="invalid_image">Invalid image</string>
    <string name="result">Result</string>
...
    <string name="place_card_and_cuvette">Place the card and cuvette with the water sample on the provided stand.</string>
    <string name="when_ready_camera">When ready, point the phone camera at it.</string>
    <string name="click_launch_camera">Click <b>Start</b> below to launch the camera preview.</string>
    <string name="camera_start_align_card">When the camera starts, align the card in the viewer as shown in the example above.</string>
    <string name="continue_on">Continue</string>
    <string name="redo">Redo</string>
    <string name="navigate_up">Navigate up</string>
    <string name="analyzing_photo">Analyzing photo…</string>
    <string name="brightness">Brightness</string>
    <string name="closer">Closer</string>
    <string name="too_close">Too close</string>
    <string name="confirm_calibration">Confirm Calibration</string>
    <string name="confirm">Confirm</string>
...
    <string name="calibration_error" tools:keep="@string/calibration_error">Calibration error</string>
    <string name="bad_lighting" tools:keep="@string/bad_lighting">Bad lighting</string>
    <string name="not_bright">Not bright enough</string>
    <string name="too_bright">Too bright</string>
    <string name="too_many_shadows">Shadows on card</string>
    <string name="image_tilted" tools:keep="@string/image_tilted">Tilted image</string>
    <string name="invalid_barcode">Wrong color card</string>
    <string name="wrong_card" tools:keep="@string/wrong_card">Wrong color card</string>

    <!-- RiskType-->
    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>

    <string name="low_alkalinity">Acidic</string>
    <string name="medium_alkalinity">Neutral</string>
    <string name="high_alkalinity">Basic</string>

    <string name="margin_of_error">Margin of error: ±</string>
    <string name="check_color_card">Check that the correct color card is being used. Also ensure that the card is placed in a well lit area with indirect lighting.</string>
    <string name="details">Details</string>
    <string name="no_image_selected">Using camera. Sample image not selected.</string>
    <string name="test_mode_image_selected">Test Mode. Sample Image: %s</string>

    <!--App Update-->
...
