<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="horizontal"
    tools:context=".ui.ImageViewActivity"
    tools:ignore="Overdraw">

    <LinearLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:gravity="center_vertical"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:contentDescription="@string/nav_app_bar_navigate_up_description"
            android:onClick="onHomeClick"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingTop="15dp"
            android:paddingEnd="8dp"
            android:paddingBottom="15dp"
            android:src="@drawable/ic_arrow_back" />

        <TextView
            android:id="@+id/textResultTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>

    <Button
        android:id="@+id/imageModeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:background="@android:color/transparent"
        android:onClick="onImageTypeClick"
        android:text="@string/show_local_image"
        android:textAlignment="viewEnd"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/app_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/app_bar" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/analyzed_image"
        android:scaleType="fitStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_bar" />

</androidx.constraintlayout.widget.ConstraintLayout>