...

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:orientation="vertical"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingTop="6dp"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingBottom="4dp"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/text_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:focusable="false"
                android:text="@{result.email}"
                android:textIsSelectable="false"
...
                android:textSize="13sp"
                android:visibility="@{AppPreferencesKt.isDiagnosticMode() ? View.VISIBLE : View.GONE}"
                tools:text="Test id" />
        </LinearLayout>

        <TextView
            android:id="@+id/textResultValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:clickable="false"
            android:focusable="false"
            android:result="@{result}"
...
