...
            app:allowDividerBelow="true"
            app:iconSpaceReserved="false"
            app:isPreferenceVisible="false" />
        <EditTextPreference
            android:dialogMessage="Enter the sample image number. Enter blank to revert to camera image"
            android:inputType="number"
            android:key="@string/testImageNumberKey"
            android:selectAllOnFocus="true"
            android:title="Test Image Number"
            app:allowDividerAbove="true"
            app:allowDividerBelow="true"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>
...
